Added wall drawings, improved contracts and resource gathering, minor bugfixes and refactorings